src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bl.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4523
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 9,
        "id": {
          "end": 1,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "argument": {
            "end": 9,
            "raw": "true",
            "start": 5,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "end": 9,
          "operator": "!",
          "start": 4,
          "type": "UnaryExpression",
          "type": "UnaryExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 9,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 9,
  "start": 0
}
