src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bm.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4524
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 16,
        "id": {
          "end": 1,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 16,
          "left": {
            "end": 8,
            "raw": "true",
            "start": 4,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "operator": "&",
          "right": {
            "end": 16,
            "raw": "false",
            "start": 11,
            "type": "Literal",
            "type": "Literal",
            "value": false
          },
          "start": 4,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 16,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 16,
  "start": 0
}
