src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__c.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3904
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 35,
          "id": {
            "end": 11,
            "name": "myVar",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "arguments": [
              {
                "argument": {
                  "arguments": [
                    {
                      "end": 27,
                      "raw": "5",
                      "start": 26,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 5.0
                    },
                    {
                      "end": 30,
                      "raw": "4",
                      "start": 29,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 4.0
                    }
                  ],
                  "callee": {
                    "end": 25,
                    "name": "legLen",
                    "start": 19,
                    "type": "Identifier"
                  },
                  "end": 31,
                  "start": 19,
                  "type": "CallExpression",
                  "type": "CallExpression"
                },
                "end": 31,
                "operator": "-",
                "start": 18,
                "type": "UnaryExpression",
                "type": "UnaryExpression"
              },
              {
                "end": 34,
                "raw": "5",
                "start": 33,
                "type": "Literal",
                "type": "Literal",
                "value": 5.0
              }
            ],
            "callee": {
              "end": 17,
              "name": "min",
              "start": 14,
              "type": "Identifier"
            },
            "end": 35,
            "start": 14,
            "type": "CallExpression",
            "type": "CallExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 35,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 35,
  "start": 0
}
