src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__d.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 36,
        "id": {
          "end": 11,
          "name": "myVar",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "end": 19,
              "left": {
                "end": 15,
                "raw": "5",
                "start": 14,
                "type": "Literal",
                "type": "Literal",
                "value": 5.0
              },
              "operator": "+",
              "right": {
                "end": 19,
                "raw": "6",
                "start": 18,
                "type": "Literal",
                "type": "Literal",
                "value": 6.0
              },
              "start": 14,
              "type": "BinaryExpression",
              "type": "BinaryExpression"
            },
            {
              "arguments": [
                {
                  "end": 32,
                  "raw": "45",
                  "start": 30,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 45.0
                },
                {
                  "end": 35,
                  "start": 34,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "end": 29,
                "name": "myFunc",
                "start": 23,
                "type": "Identifier"
              },
              "end": 36,
              "start": 23,
              "type": "CallExpression",
              "type": "CallExpression"
            }
          ],
          "end": 36,
          "start": 14,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 36,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 36,
  "start": 0
}
