src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__d2.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 27,
        "id": {
          "end": 7,
          "name": "x",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "end": 27,
          "left": {
            "argument": {
              "end": 15,
              "name": "leg2",
              "start": 11,
              "type": "Identifier",
              "type": "Identifier"
            },
            "end": 15,
            "operator": "-",
            "start": 10,
            "type": "UnaryExpression",
            "type": "UnaryExpression"
          },
          "operator": "+",
          "right": {
            "end": 27,
            "name": "thickness",
            "start": 18,
            "type": "Identifier",
            "type": "Identifier"
          },
          "start": 10,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 27,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 27,
  "start": 0
}
