src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__e.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3906
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 18,
          "id": {
            "end": 5,
            "name": "x",
            "start": 4,
            "type": "Identifier"
          },
          "init": {
            "end": 18,
            "left": {
              "end": 9,
              "raw": "1",
              "start": 8,
              "type": "Literal",
              "type": "Literal",
              "value": 1.0
            },
            "operator": "*",
            "right": {
              "end": 18,
              "left": {
                "end": 14,
                "raw": "3",
                "start": 13,
                "type": "Literal",
                "type": "Literal",
                "value": 3.0
              },
              "operator": "-",
              "right": {
                "end": 18,
                "raw": "4",
                "start": 17,
                "type": "Literal",
                "type": "Literal",
                "value": 4.0
              },
              "start": 13,
              "type": "BinaryExpression",
              "type": "BinaryExpression"
            },
            "start": 8,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "start": 4,
          "type": "VariableDeclarator"
        }
      ],
      "end": 18,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 18,
  "start": 0
}
