src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__g.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3908
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 58,
          "id": {
            "end": 4,
            "name": "x",
            "start": 3,
            "type": "Identifier"
          },
          "init": {
            "body": {
              "body": [
                {
                  "argument": {
                    "end": 32,
                    "name": "sg",
                    "start": 30,
                    "type": "Identifier",
                    "type": "Identifier"
                  },
                  "end": 32,
                  "start": 23,
                  "type": "ReturnStatement",
                  "type": "ReturnStatement"
                },
                {
                  "argument": {
                    "end": 50,
                    "name": "sg",
                    "start": 48,
                    "type": "Identifier",
                    "type": "Identifier"
                  },
                  "end": 50,
                  "start": 41,
                  "type": "ReturnStatement",
                  "type": "ReturnStatement"
                }
              ],
              "end": 58,
              "start": 13
            },
            "end": 58,
            "params": [],
            "start": 7,
            "type": "FunctionExpression",
            "type": "FunctionExpression"
          },
          "start": 3,
          "type": "VariableDeclarator"
        }
      ],
      "end": 58,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 58,
  "start": 0
}
