src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__h.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3916
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 26,
          "id": {
            "end": 9,
            "name": "obj",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "end": 26,
            "properties": [
              {
                "end": 18,
                "key": {
                  "end": 15,
                  "name": "a",
                  "start": 14,
                  "type": "Identifier"
                },
                "start": 14,
                "type": "ObjectProperty",
                "value": {
                  "end": 18,
                  "raw": "1",
                  "start": 17,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                }
              },
              {
                "end": 24,
                "key": {
                  "end": 21,
                  "name": "b",
                  "start": 20,
                  "type": "Identifier"
                },
                "start": 20,
                "type": "ObjectProperty",
                "value": {
                  "end": 24,
                  "raw": "2",
                  "start": 23,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 2.0
                }
              }
            ],
            "start": 12,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 26,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "declarations": [
        {
          "end": 55,
          "id": {
            "end": 43,
            "name": "height",
            "start": 37,
            "type": "Identifier"
          },
          "init": {
            "end": 55,
            "left": {
              "end": 47,
              "raw": "1",
              "start": 46,
              "type": "Literal",
              "type": "Literal",
              "value": 1.0
            },
            "operator": "-",
            "right": {
              "computed": false,
              "end": 55,
              "object": {
                "end": 53,
                "name": "obj",
                "start": 50,
                "type": "Identifier",
                "type": "Identifier"
              },
              "property": {
                "end": 55,
                "name": "a",
                "start": 54,
                "type": "Identifier",
                "type": "Identifier"
              },
              "start": 50,
              "type": "MemberExpression",
              "type": "MemberExpression"
            },
            "start": 46,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "start": 37,
          "type": "VariableDeclarator"
        }
      ],
      "end": 55,
      "kind": "const",
      "start": 31,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 55,
  "start": 0
}
