src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__i.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 26,
        "id": {
          "end": 9,
          "name": "obj",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "end": 26,
          "properties": [
            {
              "end": 18,
              "key": {
                "end": 15,
                "name": "a",
                "start": 14,
                "type": "Identifier"
              },
              "start": 14,
              "type": "ObjectProperty",
              "value": {
                "end": 18,
                "raw": "1",
                "start": 17,
                "type": "Literal",
                "type": "Literal",
                "value": 1.0
              }
            },
            {
              "end": 24,
              "key": {
                "end": 21,
                "name": "b",
                "start": 20,
                "type": "Identifier"
              },
              "start": 20,
              "type": "ObjectProperty",
              "value": {
                "end": 24,
                "raw": "2",
                "start": 23,
                "type": "Literal",
                "type": "Literal",
                "value": 2.0
              }
            }
          ],
          "start": 12,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 26,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "declaration": {
        "end": 59,
        "id": {
          "end": 44,
          "name": "height",
          "start": 38,
          "type": "Identifier"
        },
        "init": {
          "end": 59,
          "left": {
            "end": 48,
            "raw": "1",
            "start": 47,
            "type": "Literal",
            "type": "Literal",
            "value": 1.0
          },
          "operator": "-",
          "right": {
            "computed": false,
            "end": 59,
            "object": {
              "end": 54,
              "name": "obj",
              "start": 51,
              "type": "Identifier",
              "type": "Identifier"
            },
            "property": {
              "end": 58,
              "raw": "\"a\"",
              "start": 55,
              "type": "Literal",
              "type": "Literal",
              "value": "a"
            },
            "start": 51,
            "type": "MemberExpression",
            "type": "MemberExpression"
          },
          "start": 47,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "start": 38,
        "type": "VariableDeclarator"
      },
      "end": 59,
      "kind": "const",
      "start": 32,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 59,
  "start": 0
}
